<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_send_mail">Send Mail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_text_hint">Note Text</string>
    <string name="courses">Courses</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="user_details_header">User Details</string>
    <string name="sync_header">Sync</string>

    <!-- User Details Preferences -->
    <string name="display_name">Display Name</string>
    <string name="pref_default_display_name">Your Name</string>
    <string name="email">Email address</string>
    <string name="pref_default_email">Your Email address</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Social Media  Preferences -->

<!--    <string-array name="fav_social_media_values">-->
<!--        <item>http:google.com</item>-->
<!--        <item>http:twitter.com</item>-->
<!--        <item>http:facebook.com</item>-->
<!--    </string-array>-->

    <string name="favorite_social_media">Favorite Social Media</string>
    <string name="pref_default_favorite_social_media">Google+</string>


</resources>