<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_details_header">

        <EditTextPreference
            android:defaultValue="true"
            app:defaultValue="@string/pref_default_display_name"
            app:key="user_name"
            app:title="@string/display_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="true"
            app:defaultValue="@string/pref_default_email"
            app:key="email_address"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="true"
            android:entries="@array/fav_social_media"
            android:entryValues="@string/favorite_social_media"
            android:key="fav_social_media"
            android:title="@string/favorite_social_media" />

    </PreferenceCategory>

</PreferenceScreen>