<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_note_add_24"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_courses" />
    </group>
    <group android:id="@+id/communicate">
        <item
            android:id="@+id/subtitle"
            android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_send"
                    android:title="@string/menu_send" />
            </menu>
        </item>

    </group>
</menu>